<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editMinInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/min_interval"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMaxInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/max_interval"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMinPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/min_press_duration"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMaxPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/max_press_duration"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMinBreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/min_break_delay"
            android:inputType="number" />

        <EditText
            android:id="@+id/editMaxBreak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/max_break_delay"
            android:inputType="number" />

        <EditText
            android:id="@+id/editFreq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/delay_frequency"
            android:inputType="number" />

    </LinearLayout>
</ScrollView>